--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:mysql://mysql-db:3306/cliques?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=user
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-createDatabaseIfNotExist=true
+server.tomcat.accesslog.enabled=true
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://dpg-cfqhoi5a4996ad25nq5g-a.render.com:5432/cliques
+spring.datasource.username=cliques_user
+spring.datasource.password=eJVbUdFx4Q5J1gGNGlYMHZIfbzPVohBy
+spring.datasource.driver-class-name=org.postgresql.Driver
