--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,8 @@ spring.jpa.hibernate.show-sql=true
 
 spring.datasource.url=jdbc:postgresql://dpg-cfqhoi5a4996ad25nq5g-a.oregon-postgres.render.com:5432/cliques
 spring.datasource.username=cliques_user
+
+#spring.datasource.password=${DB_PASSWORD}
+
 spring.datasource.password=eJVbUdFx4Q5J1gGNGlYMHZIfbzPVohBy
 spring.datasource.driver-class-name=org.postgresql.Driver
